my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echomap
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
spec:
  defaultBackend:
    service:
      name: echoheaders
      port:
        number: 443
